; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___handle_refs.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___handle_refs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }

@UT64_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"xrefs:x refs:X \00", align 1
@PANEL_CMD_DISASSEMBLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__handle_refs(%struct.TYPE_8__* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @UT64_MAX, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i64, i64* %6, align 8
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  store i64 %12, i64* %14, align 8
  br label %15

15:                                               ; preds = %11, %3
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %17 = call i32 @__show_status(%struct.TYPE_8__* %16, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %7, align 4
  switch i32 %18, label %25 [
    i32 120, label %19
    i32 88, label %22
  ]

19:                                               ; preds = %15
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %21 = call i32 @r_core_visual_refs(%struct.TYPE_8__* %20, i32 1, i32 0)
  br label %26

22:                                               ; preds = %15
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %24 = call i32 @r_core_visual_refs(%struct.TYPE_8__* %23, i32 0, i32 0)
  br label %26

25:                                               ; preds = %15
  br label %26

26:                                               ; preds = %25, %22, %19
  %27 = load i32*, i32** %5, align 8
  %28 = load i32, i32* @PANEL_CMD_DISASSEMBLY, align 4
  %29 = call i64 @__check_panel_type(i32* %27, i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %40

31:                                               ; preds = %26
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %33 = load i32*, i32** %5, align 8
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = call i32 @__set_panel_addr(%struct.TYPE_8__* %32, i32* %33, i64 %36)
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %39 = call i32 @__set_refresh_all(%struct.TYPE_8__* %38, i32 0, i32 0)
  br label %47

40:                                               ; preds = %26
  %41 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %42 = load i32, i32* @PANEL_CMD_DISASSEMBLY, align 4
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = call i32 @__set_addr_by_type(%struct.TYPE_8__* %41, i32 %42, i64 %45)
  br label %47

47:                                               ; preds = %40, %31
  ret void
}

declare dso_local i32 @__show_status(%struct.TYPE_8__*, i8*) #1

declare dso_local i32 @r_core_visual_refs(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i64 @__check_panel_type(i32*, i32) #1

declare dso_local i32 @__set_panel_addr(%struct.TYPE_8__*, i32*, i64) #1

declare dso_local i32 @__set_refresh_all(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @__set_addr_by_type(%struct.TYPE_8__*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
